third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/dereference_full_invalid.exp

Diagnostics:
error: cannot dereference local `x` which is still mutable borrowed
   ┌─ tests/reference-safety/v1-tests/dereference_full_invalid.move:18:9
   │
17 │         let y = id_mut(x);
   │                 --------- previous mutable call result
18 │         *x;
   │         ^^ dereferenced here
